新增代理推广链接

--- a/src/demo/代理软件操作.md
+++ b/src/demo/代理软件操作.md
@@ -1,5 +1,13 @@
 #  代理软件配置
 
+## 0. 机场推荐
+### 0-1. 链接
+1. [teacat](https://teacat1.com/#/register?code=zjZsXPK0)
+
+2. [creamdata](https://www.creamdata.net/)
+
+3. [tianhang](https://tianhang.club/auth/register?code=sXVg)
+
 ## 1. Clash for Windows
 ### 1-1. 下载
 1. [Clash for Windows](https://ghproxy.com/https://github.com/Fndroid/clash_for_windows_pkg/releases/download/0.19.17/Clash.for.Windows.Setup.0.19.17.exe)
