修正脚本说明文档

--- a/src/demo/脚本.md
+++ b/src/demo/脚本.md
@@ -1,6 +1,6 @@
 #  脚本配置文件
 
-### 
+### **请仔细阅读配置要求以及说明**
 **示例：**
 ```json
 {
@@ -8,7 +8,7 @@
 	"browserIdList":"50c9995fe82347b5a83135cf1fbcd2e5|casdfcsdgsdsf47b5a83135cf1fbcd2e5|sdsadsacsfasdsad5as4asc5sac1s5a",
 	"urlfilePath":"D:\\MyProfils\\小组url.txt",
 	"imgfilePath":"D:\\MyProfils\\图片",
-	"txtfilePath":"D:\\MyProfils\\\\文案.txt",
+	"txtfilePath":"D:\\MyProfils\\文案.txt",
 	"imgnum":2,
 	"num": 1,
 	"tim": 5,
@@ -38,7 +38,11 @@
 <img class="personalPic" :src="('/vuePress/assets/img/fopy.png')">
 
 #### **urlfilePath**
-- 小组链接的文件路径，路径需要使用 `\\` （路径不得包含特殊符号以及 - ’ “ ，？/等）
+- 小组链接的文件路径，路径需要使用 `\\` （路径不得包含特殊符号以及 - ’ “ ，？/等），小组链接一行一个
+<br>
+:::danger 警告
+加小组操作将 **删除** 小组文件的内容，请在运行任务前进行 **文件备份**
+:::
 #### **imgfilePath**
 - 图片资源的文件路径 （需要自测：图片文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误）
 #### **txtfilePath**
@@ -52,7 +56,7 @@
 #### **operation**
 - `脚本功能 `
 - 【0】：加小组  
-- 【1】： 发帖
+- 【1】：发帖
 
 #### **使用：**
 双击 `luo.exe` , 或者在文件的根目录使用cmd运行 .\luo.exe
