修正脚本文档2

--- a/src/demo/脚本.md
+++ b/src/demo/脚本.md
@@ -1,6 +1,9 @@
 #  脚本配置文件
 
-### **请仔细阅读配置要求以及说明**
+:::danger 注意
+#### 请将浏览器语言设置为 **中文（简体）**
+:::
+#### **请仔细阅读配置要求以及说明**
 **示例：**
 ```json
 {
@@ -38,15 +41,26 @@
 <img class="personalPic" :src="('/vuePress/assets/img/fopy.png')">
 
 #### **urlfilePath**
-- 小组链接的文件路径，路径需要使用 `\\` （路径不得包含特殊符号以及 - ’ “ ，？/等），小组链接一行一个
+- 小组链接的文件路径，路径需要使用 `\\` ，小组链接一行一个
 <br>
+:::warning 文件路径说明
+文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误
+:::
 :::danger 警告
 加小组操作将 **删除** 小组文件的内容，请在运行任务前进行 **文件备份**
 :::
 #### **imgfilePath**
-- 图片资源的文件路径 （需要自测：图片文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误）
+- 图片资源的文件路径 
+:::warning 文件路径说明
+图片文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误
+:::
+
 #### **txtfilePath**
-- 文案资源的文件路径，【排版：文案的内容需要换行的位置使用  |  隔开】，文案一行一个
+- 文案资源的文件路径，【排版：文案的内容需要换行的位置使用  **`|`**  隔开】，文案一行一个
+:::warning 文件路径说明
+文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误
+:::
+
 #### **imgnum**
 - 需要发送图片的数量
 #### **num**
