--- a/src/demo/脚本.md
+++ b/src/demo/脚本.md
@@ -1,8 +1,11 @@
 #  脚本配置文件
 
 :::danger 注意
-#### 请将浏览器语言设置为 **中文（简体）**
+#### 1.请将语言设置为 ==**中文（简体）**==
+![]()
+<img class="personalPic" :src="('/vuePress/assets/img/language.png')">
 :::
+
 #### **请仔细阅读配置要求以及说明**
 **示例：**
 ```json
@@ -90,3 +93,9 @@ Please legit check..|Does anyone know about this?
 
 ![]()
 <img class="personalPic" :src="('/vuePress/assets/img/fbdiscuss.png')">
+
+## FQA 问题解答
+### 1.运行脚本黑窗口会闪退？
+#### 答：检查比特浏览器 ==**端口是否填写正确**==，若使用 **`员工账号`**，请在当前电脑登陆 **`主账号`** 之后获取端口数据 
+### 2.脚本打开浏览器之后不运行？
+#### 答：请检查当前环境语言是否是 ==**中文（简体）**==
