--- a/src/demo/脚本.md
+++ b/src/demo/脚本.md
@@ -94,7 +94,7 @@ Please legit check..|Does anyone know about this?
 ![]()
 <img class="personalPic" :src="('/vuePress/assets/img/fbdiscuss.png')">
 
-## FQA 问题解答
+## FAQ 问题解答
 ### 1.运行脚本黑窗口会闪退？
 #### 答：检查比特浏览器 ==**端口是否填写正确**==，若使用 **`员工账号`**，请在当前电脑登陆 **`主账号`** 之后获取端口数据 
 ### 2.脚本打开浏览器之后不运行？
