--- a/src/demo/脚本.md
+++ b/src/demo/脚本.md
@@ -1,13 +1,15 @@
 #  脚本配置文件
 
+### 注意事项
 :::danger 注意
-#### 1.请将语言设置为 ==**中文（简体）**==
+### 请将语言设置为 ==**中文（简体）**==
 ![]()
 <img class="personalPic" :src="('/vuePress/assets/img/language.png')">
 :::
 
 #### **请仔细阅读配置要求以及说明**
-**示例：**
+
+### **示例**
 ```json
 {
 	"port": "16535",
@@ -26,14 +28,15 @@
 需要提前打开 **【比特浏览器程序】**（ 注意是【比特浏览器】软件，并非比特浏览器内部的浏览器 ）
 :::
 
-#### **port** 
+## 参数说明
+### **port** 
 - **比特浏览器端口**
 - **操作**：打开**比特浏览器**，点击 **“系统设置”** ，找到 **“本地接口”** ，复制接口后自定义的端口）
 
 ![]()
 <img class="personalPic" :src="('/vuePress/assets/img/btport.png')">
 
-#### **browserIdList** 
+### **browserIdList** 
 - 比特浏览器的id
 - **操作**：点击浏览器的指纹配置，复制ID,多个ID使用 `|` 隔开，见上述示例
 
@@ -43,7 +46,7 @@
 ![]()
 <img class="personalPic" :src="('/vuePress/assets/img/fopy.png')">
 
-#### **urlfilePath**
+### **urlfilePath**
 - 小组链接的文件路径，路径需要使用 `\\` ，小组链接一行一个
 <br>
 :::warning 文件路径说明
@@ -58,19 +61,19 @@
 图片文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误
 :::
 
-#### **txtfilePath**
+### **txtfilePath**
 - 文案资源的文件路径，【排版：文案的内容需要换行的位置使用  **`|`**  隔开】，文案一行一个
 :::warning 文件路径说明
 文件名称不得包含特殊符号以及 - ’ “ ，？/等，避免发生脚本错误
 :::
 
-#### **imgnum**
+### **imgnum**
 - 需要发送图片的数量
-#### **num**
+### **num**
 - 需要添加的小组 / 发帖 数量
-#### **tim**
+### **tim**
 - 单个账号 添加小组 / 发帖 成功之后的间隔时间
-#### **operation**
+### **operation**
 - `脚本功能 `
 - 【0】：加小组  
 - 【1】：发帖
